# BotW-BetterVR-Linux-Project

./: CMakeLists.txt  README.md
include/: game_structs.h  pch.h
resources/BreathOfTheWild_BetterVR/: patch_CTRL_Bones.asm  patch_CTRL_ButtonInput.asm  patch_CTRL_CameraControls.asm  patch_CTRL_Equipment.asm  patch_CTRL_HookWeaponHands.asm  patch_FirstPersonMode.asm  patch_Misc.asm  patch_RND_Logging.asm  patch_RND_StereoRendering.asm  patch_RND_StereoRendering_ActorJobs.asm  patch_SharedUtils.asm  patch_UpdateCamera.asm  patch_UpdateProjectionMatrix.asm  patch_UpdateSettings.asm  rules.txt
src/hooking/: camera.cpp  cemu_hooks.h  controls.cpp  framebuffer.cpp  framebuffer.h  hands.cpp  layer.cpp  weapon.cpp
src/rendering/: d3d12.cpp  d3d12.h  openxr.cpp  openxr.h  renderer.cpp  renderer.h  swapchain.cpp  vulkan.h  vulkan_imgui.cpp
